workspace = { members = [ "coコンセプトから理解するRust/p112", "coコンセプトから理解するRust/p127", "coコンセプトから理解するRust/p130", "coコンセプトから理解するRust/p131", "ruRustで作るプログラミング言語/p0607-group"] }
[package]
name = "rust-codespaces"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
