workspace = { members = [ "coコンセプトから理解するRust_20250730/p037-start", "coコンセプトから理解するRust_20250730/p041-the_first_code", "coコンセプトから理解するRust_20250730/p054-test_code_in_rust", "coコンセプトから理解するRust_20250730/p058-defining_and_importing_modules", "coコンセプトから理解するRust_20250730/p107-once_bound", "ruRustで作るプログラミング言語/p0607-group"] }
[package]
name = "rust-codespaces"
version = "0.1.0"
authors = ["Your Name"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
